split app state, extract filter, rename types

--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Klyva TodoMVC</title>
     <link rel="stylesheet" href="todomvc.css" />
+    <link ref="shortcut icon" href="favicon.ico" />
   </head>
 
   <body>
